Added vk auth
