# backend/src/modules/auth/controller.js
@@ -38,3 +38,23 @@ export async function googleAuthCallback(ctx, next) {
     };
   })(ctx, next);
 }
+
+export async function vkAuth(ctx, next) {
+  return passport.authenticate('vkontakte')(ctx, next);
+}
+
+
+export async function vkAuthCallback(ctx, next) {
+  return passport.authenticate('vkontakte', async user => {
+    console.log('vk', user);
+
+    const token = user.generateToken();
+    const response = user.toJSON();
+    delete response.password;
+
+    ctx.body = {
+      token,
+      user: response
+    };
+  })(ctx, next);
+}
